small alignment and spacing fix

--- a/blocks/footer-content/footer-content.css
+++ b/blocks/footer-content/footer-content.css
@@ -15,6 +15,7 @@
     color: #fff;
     font-family: 'Helvetica';
     font-size: 16px;
+    margin-bottom: 5%
 }
 
 .footer-content h4 {
@@ -24,7 +25,8 @@
 }
 
 .footer-content ul {
-    margin-top: 10px;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .footer-content li {
@@ -33,4 +35,9 @@
     color: #f5f6f8;
     font-family: 'Helvetica';
     font-size: 14px;
+}
+
+.footer-content li picture a img {
+    max-width: 26%;
+    height: 40px;
 }
