--- a/blocks/stay-connected/stay-connected.css
+++ b/blocks/stay-connected/stay-connected.css
@@ -10,7 +10,7 @@
     width: 74%;
     height: 115px;
     padding: 2% 1% 1%;
-    margin-top: -10%;
+    margin-top: -7%;
 }
 
 .stay-connected-container h6 {
